@startuml RemindLedger - Logical Data Model
' Use same C4 theme as context/container diagrams for consistent look
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/themes/puml-theme-C4_blue.puml

' Style class diagram to match C4 (component-like boxes)
skinparam ClassBackgroundColor $COMPONENT_BG_COLOR
skinparam ClassBorderColor DarkSlateGray
skinparam ClassFontColor $COMPONENT_FONT_COLOR
skinparam ClassFontStyle bold
skinparam ArrowColor $ARROW_COLOR
skinparam roundCorner 10
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Logical Data Model

class User <<entity>> {
  id          : uuid
  cognito_sub : string
  email       : string
  display_name: string
  created_at  : timestamp
  updated_at  : timestamp
  --
  cognito_sub: stable Cognito user identifier (unique)
  email: synced from Cognito JWT claims
  display_name: optional, local display name
}

class Reminder <<entity>> {
  id            : uuid
  user_id       : uuid
  name          : string
  schedule_type : enum
  times         : time[]
  date          : date
  days_of_week  : enum[]
  day_of_month  : integer
  channels      : enum[]
  valid_until   : date
  created_at    : timestamp
  updated_at    : timestamp
  --
  schedule_type: once | daily | weekly | monthly
  times: time(s) of day to fire (all types)
  date: specific date (once only)
  days_of_week: e.g. MON, WED, FRI (weekly only)
  day_of_month: e.g. 1, 15 (monthly only)
  channels: web_push | in_app | email | sms (default: [web_push])
  valid_until: null = runs until deleted
}

class Notification <<entity>> {
  id          : uuid
  reminder_id : uuid
  due_at      : timestamp
  status      : enum
  channel     : enum
  sent_at     : timestamp
  acked_at    : timestamp
  created_at  : timestamp
  --
  status: pending | sent | failed | acked
  channel: web_push | in_app | email | sms
}

User "1" -- "*" Reminder : has
Reminder "1" -- "*" Notification : generates

@enduml
